language/move-lang/tests/move_check/parser/expr_unary_negation.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/expr_unary_negation.move:5:18
  │
5 │     assert(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
  │                  ^
  │                  │
  │                  Unexpected '-'
  │                  Expected an expression term

