language/move-lang/tests/move_check/parser/expr_unary_negation.move
script {

fun main() {
    // Unary negation is not supported.
    assert(((1 - -2) == 3) && (-(1 - 2) == 1), 100);
}
}
